# trainmgr

./: .gitignore  .gitmodules  CMakeLists.txt  test.db
src/: addview.c  dbview.c  main.c  menu.c  shuntview.c  stock.c  stock.h  ui.c  ui.h  views.h
